# hot-ranking-algorithm-rs

./: .travis.yml  Cargo.toml  README.md  main.rs  test.rs
src/: lib.rs
